# kg_neptune

./: .gitignore  Dockerfile  Dockerfile.multi.v2.final  MULTI_BUILDER_USAGE.md  README.md  README_AWS.md  SINGLE_VOLUME_SOLUTION.md  build_all_kg.py  build_multi_v2_final.sh  civic_kg_builder.py  clinicaltrials_kg_builder.py  cloudformation.yaml  deploy.sh  dgidb_kg_builder.py  enrichr_kg_builder.py  hpo_configurable_kg_builder.py  mesh_nt_kg.py  mesh_xml_kg.py  policynotes.md  pyproject.toml  requirements.txt  run.sh  run_from_config.py  run_single_volume.py  run_single_volume_multi_fixed_v2_final.py  sgh-notes.md  sghpolicy.json
adapters/: __init__.py
civic/: 01-Jul-2025-AssertionSummaries.tsv  01-Jul-2025-ClinicalEvidenceSummaries.tsv  01-Jul-2025-FeatureSummaries.tsv  01-Jul-2025-MolecularProfileSummaries.tsv  01-Jul-2025-VariantGroupSummaries.tsv  01-Jul-2025-VariantSummaries.tsv
config/: biocypher_config.yaml  hpo_column_config.yaml  kg_config.yaml  kg_config1.yaml  kg_config1_fixed.yaml  kg_config1_fixed_outcomes.yaml  kg_config1_no_field_limit.yaml  kg_config_civic_test.yaml  kg_config_clinicaltrials.yaml  kg_config_clinicaltrials_all_data.yaml  kg_config_clinicaltrials_recent.yaml  kg_config_clinicaltrials_simple.yaml  kg_config_clinicaltrials_test.yaml  kg_config_clinicaltrials_us.yaml  kg_config_enrichr_hpo.yaml  kg_config_hpo_only.yaml  kg_config_multi_with_clinicaltrials.yaml  local_test.yaml  production_neptune.yaml  schema_civic.yaml  schema_clinical_trial.yaml  schema_config.yaml  schema_config_civic.yaml  schema_config_comprehensive.yaml  (+4 more)
(+69 files in other folders)
